# api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  format phone.py  pyproject.toml  ruff.toml  run.py  settings.py
api/: app.py  depends.py
api/routers/v1/: comments.py  hello.py  models.py  places.py
migrations/: 1_create_extension.down.sql  1_create_postgis_extension.down.sql  20230509203215_init.up.sql  2_create_places_and_places_sources_table.down.sql  2_create_places_and_places_sources_table.up.sql  2_create_table.up.sql  3_create_comments_table.up.sql  3_create_comments_table_up.sql  4_change_palces_name_varchar_to_text.down.sql  4_change_palces_name_varchar_to_text.up.sql  5_add_constraint_unique.down.sql  5_add_constraint_unique.up.sql  6_change_places_and_comments_id.down.sql  6_change_places_and_comments_id.up.sql
src/dal/postgres/: comments.py  places.py
src/services/: comments.py  places.py
